# webhook-template

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  hook.py  justfile  requirements.txt
gohook/: go.mod  go.sum  hook.go
src/: error.rs  main.rs
src/web/: routes_login.rs
tests/: quick_dev.rs
viam-webhook/: Cargo.toml
viam-webhook/src/: main.rs
