[package]
name = "viam-webhook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["tracing"] }
duct = "0.13.6"
open = "4.1.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
tower-http = { version = "0.4.1", features = ["trace", "tokio"] }

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
